# cpp-scientificComputing

./: .gitignore  .travis.yml  README.md
exercises/: Default_Style.xml
project/: .gitignore  Body.h  CMakeLists.txt  Constants.h  Object.h  Readme.txt  Simulation.cpp  Simulation.h  main.cpp  makefile  run.sh
project/bashScripts/: old.sh  outputAnimated.sh  outputStatic.sh  plotForTesting.sh  plotGIF.sh  plotWXT.sh
project/graphics/: README.md  graphic.cpp  graphic.h
project/graphics/shaders/: colorShading.frag  colorShading.vert
project/helper/: CMakeLists.txt  IOManager.h  Vector.h  main.cpp  makefile
project/helper/include/: Body.h  BodyCloud.h  Constants.h  IOManager.h  Simulation.h  Vector.h
project/helper/src/: BodyCloud.cpp  IOManager.cpp  Simulation.cpp  Vector.cpp
project/include/: Body.h  BodyCloud.h  Constants.h  Simulation.h  graphic.h
project/links and stuff/: chrome-hileadecbhbbdhmjccaoiollhcaploag-Default.desktop  chrome-ikdmmpblfihipmnmlajhdkekmpnphcbo-Default.desktop  chrome-jmonbgnneepalngiicekdnajcccfjnbi-Default.desktop  chrome-jnjnoeafiaacmjepglabfhlikjgiaeei-Default.desktop
project/output/keep/: 2017-01-03_17:06:24_Constants.h  2017-01-04_17:03:32_Constants.h  2017-01-04_17:08:32_Constants.h  2017-01-04_17:08:32_gnuPlotData.gplt  2017-01-05_02:48:34_gnuPlotData.gplt  2017-01-05_14:42:28_gnuPlotData.gplt  2017-01-05_15:55:22_Constants.h
project/results/: plot_moon_distances.gp  plot_phobos_distances.gp  plot_phobos_momentum.gp  plot_toy_distances.gp  plot_toy_momentum.gp
project/src/: BodyCloud.cpp  Simulation.cpp  graphic.cpp
(+149 files in other folders)
